# teaface

./: pyproject.toml
src/teaface/: __init__.py  __main__.py  detect.py  version.py
