[build-system]
requires = [
    "hatchling >= 1.26"
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "src/teaface/*.so",
  "src/teaface/*.dylib",
  "src/teaface/*.dll",
  "src/teaface/**/*.py",
  "src/teaface"
]

[tool.hatch.build.targets.wheel.sources]
"src" = "."

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "teaface"
requires-python = ">=3.9"
dependencies = [
	"typing",
	"argparse",
	"pytest>=8.4.0",
	"deepface==0.0.93",
	"tf-keras==2.19.0"
]
description = "Utility for face embedding database generation, and for querying face images against them"
version = "0.0.1"
